# semantic-reporting

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml  run.bat
app/: config.py  main.py
app/agents/: sql_agent.py
app/api/: routes.py  schemas.py
app/db/: manager.py
app/mcp/: server.py
app/services/: viz_service.py
backend/: .env.example  requirements.txt
backend/app/: config.py  main.py
backend/app/agents/: _usage.py  critic.py  insight_agent.py  intent_classifier.py  llm_factory.py  orchestrator.py  planner.py  schema_agent.py  sql_agent.py  sql_workers.py  viz_designer.py
backend/app/api/: conversation_routes.py  routes.py  schemas.py
backend/app/cache/: __init__.py  cache.py
backend/app/db/: app_db.py  manager.py  models.py  repositories.py
backend/app/mcp/: server.py
backend/app/security/: crypto.py  guardrails.py  sql_guard.py
backend/app/services/: conversation_service.py  export_service.py  report_service.py  viz_service.py
backend/scripts/: README.md  check_data.py  check_insight.py  check_intent.py  check_llm_factory.py  check_orchestrator.py  check_planner.py  check_planner_one.py  check_schema_agent.py  check_sql_workers.py  check_viz_designer.py  debug_planner_raw.py  seed_aua_kua.py
documentation/: HLD.md  LLD.md  PRODUCT_PROGRESS.md  cost-estimation.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/commands/: index.ts
frontend/src/components/: AgentProgress.tsx  AnalysisCard.tsx  CommandPalette.tsx  (+11 more)
(+6 files in other folders)
