[project]
name = "nldb-query"
version = "0.1.0"
description = "Natural Language to Database Query Application"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "fastmcp>=3.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-groq>=0.2.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "sqlalchemy>=2.0.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "psycopg2-binary>=2.9.0",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=24.0.0",
    "plotly>=6.7.0",
    "kaleido>=1.2.0",
    "sqlglot>=25.0.0",
    "fpdf2>=2.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
